--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <span id="bestLabel">Record!</span>
                 <span id="best">-</span>
             </div>
-            <button id="startBtn"><span class="material-symbols-outlined">play_circle</span></button>
+            <button style="width: 100px;height: 100px;display: flex;align-items: center;justify-content: center;bottom: 50%;left: 50%;transform: translate(-50%, 50%);" id="startBtn"><span style="font-size: 72px;" class="material-symbols-outlined">play_arrow</span></button>
         </div>
     </div>
     <script src="game.js"></script>
