--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <title>Circle Survivor</title>
 </head>
 <body>
-    <canvas id="game"></canvas>
+    <div class="canvas-wrapper" id="canvas-wrapper">
+        <canvas id="game"></canvas>
+    </div>
     <div class="game-ui">
         <div class="powerup-toast" aria-live="polite"></div>
         <div class="in-game">
